--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+package-lock.json
 
 # Runtime data
 pids
@@ -40,6 +41,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+dist/
+
 
 # TypeScript v1 declaration files
 typings/
@@ -102,3 +105,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+#Idea Files
+.idea
