--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/xiaoxuliu123/bpmn-react#readme",
   "devDependencies": {
     "@babel/core": "^7.14.3",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
@@ -36,8 +37,9 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.3.0",
-    "antd": "^3.5.4",
+    "@ant-design/icons": "^4.8.0",
+    "antd": "^5.4.7",
+    "axios": "^1.3.4",
     "bpmn-js": "^8.5.0",
     "bpmn-js-properties-panel": "^0.43.0",
     "react": "^17.0.1",
